// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OngoingCallsDropdown renders NoCalls without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-1a2ohtu"
    />
  </div>
</body>
`;

exports[`OngoingCallsDropdown renders OneOngoing without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-1a2ohtu"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-8i0p31"
      >
        <button
          aria-controls="_r_1_"
          aria-expanded="false"
          aria-label="1 ongoing call"
          class="rcx-box rcx-box--full rcx-button--with-badge rcx-button--small-square rcx-button--icon-secondary-info rcx-button--square rcx-button--icon rcx-button"
          title="Ongoing calls"
          type="button"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-4pvxx3"
          >
            ❲
          </i>
          <span
            aria-hidden="true"
            class="rcx-button__badge"
          >
            <span
              class="rcx-box rcx-box--full rcx-badge rcx-badge--secondary"
            >
              1
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`OngoingCallsDropdown renders OnlyDeclined without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-1a2ohtu"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-8i0p31"
      >
        <button
          aria-controls="_r_2_"
          aria-expanded="false"
          aria-label="Ongoing calls"
          class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button"
          title="Ongoing calls"
          type="button"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-4pvxx3"
          >
            ❲
          </i>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`OngoingCallsDropdown renders Ringing without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-1a2ohtu"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-8i0p31"
      >
        <button
          aria-controls="_r_3_"
          aria-expanded="true"
          aria-label="1 ongoing call"
          class="rcx-box rcx-box--full rcx-button--with-badge rcx-button--small-square rcx-button--icon-secondary-danger rcx-button--square rcx-button--icon rcx-button"
          title="Ongoing calls"
          type="button"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-4pvxx3"
          >
            ❲
          </i>
          <span
            aria-hidden="true"
            class="rcx-button__badge"
          >
            <span
              class="rcx-box rcx-box--full rcx-badge rcx-badge--secondary"
            >
              1
            </span>
          </span>
        </button>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-tile--elevation-2 rcx-tile rcx-css-6qwf9c"
        data-testid="dropdown"
        style="bottom: 0px; left: 0px;"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-xvdgy9"
        >
          <span
            data-focus-scope-start="true"
            hidden=""
          />
          <div
            class="rcx-box rcx-box--full rcx-css-rbegs8"
            id="_r_3_"
          >
            <div
              class="rcx-box rcx-box--full rcx-css-1tbw8nv"
            >
              <ul
                aria-label="Ongoing calls"
                class="rcx-box rcx-box--full rcx-css-1nirrkh"
              >
                <li
                  class="rcx-box rcx-box--full"
                >
                  <div
                    class="rcx-box rcx-box--full rcx-css-1hid35h rcx-css-fh6trj"
                  >
                    <div
                      class="rcx-box rcx-box--full rcx-css-127j9mz"
                      style="gap: 4px;"
                    >
                      <i
                        aria-hidden="true"
                        class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-1g87xs3"
                      >
                        ❲
                      </i>
                      <a
                        class="rcx-box rcx-box--full rcx-css-wli0b4 rcx-css-149yika"
                        href="/conference/ringing"
                      >
                        Ada Lovelace
                      </a>
                      <div
                        class="rcx-box rcx-box--full rcx-css-7j82ur"
                      >
                        <span
                          class="rcx-box rcx-box--full rcx-css-18wfy10"
                        >
                          Ringing
                          …
                        </span>
                      </div>
                    </div>
                    <div
                      class="rcx-box rcx-box--full rcx-css-127j9mz"
                      style="gap: 4px;"
                    >
                      <div
                        class="rcx-box rcx-box--full rcx-css-1319w2q"
                      >
                        <div
                          class="rcx-box rcx-box--full rcx-css-1p4sjp4"
                        >
                          1 person joined
                        </div>
                      </div>
                      <div
                        class="rcx-box rcx-box--full rcx-css-1f9gxzh rcx-css-1h0rn6m"
                        style="gap: 4px;"
                      >
                        <button
                          aria-label="Silence"
                          class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
                          title="Silence"
                          type="button"
                        >
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-icon--name-bell-off rcx-icon rcx-css-1tg7yd0"
                          >
                            
                          </i>
                        </button>
                        <button
                          aria-label="Decline"
                          class="rcx-box rcx-box--full rcx-button--mini-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button"
                          title="Decline"
                          type="button"
                        >
                          <i
                            aria-hidden="true"
                            class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-1tg7yd0"
                          >
                            
                          </i>
                        </button>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <span
            data-focus-scope-end="true"
            hidden=""
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`OngoingCallsDropdown renders SeveralOngoing without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-1a2ohtu"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-8i0p31"
      >
        <button
          aria-controls="_r_4_"
          aria-expanded="false"
          aria-label="3 ongoing calls"
          class="rcx-box rcx-box--full rcx-button--with-badge rcx-button--small-square rcx-button--icon-secondary-info rcx-button--square rcx-button--icon rcx-button"
          title="Ongoing calls"
          type="button"
        >
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-4pvxx3"
          >
            ❲
          </i>
          <span
            aria-hidden="true"
            class="rcx-button__badge"
          >
            <span
              class="rcx-box rcx-box--full rcx-badge rcx-badge--secondary"
            >
              3
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;
